# 2022SoftwareEngineering

./: Docs.md  Flowdiagram.odg  README.md
Docs/: Hardware.odg  UsecaseDiagram.odg
EPaperLib/: CMakeLists.txt  Kconfig
EPaperTest1/: CMakeLists.txt  Makefile
EPaperTest1/main/: CMakeLists.txt
LAMP/: lamp.yml
main-SD/: main-SD.ino
main-SD/test/: TestMain.c  test.c  test.h
